# UNOArena

./: .gitignore  README.md
uno/: package-lock.json  package.json
uno/public/: index.html  manifest.json
uno/src/BotsServer/: BotsServer.ts  LLMBot.ts
uno/src/BotsServer/__tests__/: LLMBot.integration.test.ts
uno/src/Components/CreateServer/: CreateServer.jsx
uno/src/Components/CreateUser/: CreateUser.jsx
uno/src/Components/Game/: Game.tsx
uno/src/Components/Game/DrawingStack/: DrawingStack.jsx
uno/src/Components/Game/LeftStack/: LeftStack.jsx
uno/src/Components/Game/PlayerStack/: PlayerStack.jsx
uno/src/Components/Game/RightStack/: RightStack.jsx
uno/src/Components/Game/Scoreboard/: Scoreboard.jsx
uno/src/Components/Game/TopStack/: TopStack.jsx
uno/src/Components/JoinServer/: JoinServer.jsx
uno/src/Components/MainMenu/: MainMenu.jsx
uno/src/Components/Shared/Avatar/: Avatar.jsx
uno/src/Components/Shared/Button/: Button.jsx
uno/src/Components/Shared/Switch/: Switch.jsx
uno/src/Components/StartPage/: StartPage.jsx
uno/src/Components/WaitingLobby/: Lobby.jsx
uno/src/Server/: OfflineServer.ts  ServerInterface.ts
uno/src/api/: API.ts
uno/src/stores/features/: gameSlice.ts
uno/src/utils/: hooks.ts  interfaces.ts  llmConfig.ts
uno_backend/: LLMPlayer.py  README.md  config.py  main.py  pyproject.toml  requirements.txt  test_api_integration.py  test_llm_player.py
